--- a/tex/hphacronyms.sty
+++ b/tex/hphacronyms.sty
@@ -87,14 +87,14 @@
 \newcounter{hphdeltadftcounter} \setcounter{hphdeltadftcounter}{0}
 \providecommand{\deltaDFT}{abc}
 \renewcommand{\deltaDFT}
-  {\addtocounter{hphdeltadftcounter}{1}\addtocounter{hphdftcounter}{1}\ifthenelse{\equal{\thehphdftcounter}{1}}{\textDelta{}-self\textendash{}consistent\textendash{}field (\textDelta-DFT)}{\textDelta-DFT}}
+  {\addtocounter{hphdeltadftcounter}{1}\addtocounter{hphdftcounter}{1}\ifthenelse{\equal{\thehphdftcounter}{1}}{\textDelta{}-self\textendash{}consistent\textendash{}field (\textDelta{}DFT)}{\textDelta{}DFT}}
 
 %
 %   \deltaSCF
 \newcounter{hphdeltascfcounter} \setcounter{hphdeltascfcounter}{0}
 \providecommand{\deltaSCF}{abc}
 \renewcommand{\deltaSCF}
-  {\addtocounter{hphdeltascfcounter}{1}\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{\textDelta{}-self\textendash{}consistent\textendash{}field (\textDelta-SCF)}{\textDelta-SCF}}
+  {\addtocounter{hphdeltascfcounter}{1}\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{\textDelta{}-self\textendash{}consistent\textendash{}field (\textDelta{}SCF)}{\textDelta{}SCF}}
 %
 %   \DFT
 \newcounter{hphdftcounter} \setcounter{hphdftcounter}{0}
