Updates to the group bib file and added DDNO acronym.

--- a/bibtex/bib/hratchian.bib
+++ b/bibtex/bib/hratchian.bib
@@ -4,6 +4,18 @@
 % 2013.
 %
 
+@article{Harb:2021:1,
+author = {Harb, Hassan and Hratchian, Hrant P},
+year = {2021},
+title = {{$\Delta{}$SCF Dyson orbitals and pole strengths from natural ionization orbitals}},
+journal = {The Journal of Chemical Physics},
+issn = {0021-9606},
+doi = {10.1063/5.0040454},
+pages = {084104},
+number = {8},
+volume = {154},
+}
+
 @article{DeVine:2018ge,
 author = {DeVine, Jessalyn A and Taka, Ali Abou and Babin, Mark C and Weichman, Marissa L and Hratchian, Hrant P and Neumark, Daniel M},
 title = {{High-resolution photoelectron spectroscopy of \ce{TiO3H2^-}: Probing the \ce{TiO2^-} + \ce{H2O} dissociative adduct}},
